Version 0.11
------------------------------------------------------------------------------

* Fix for regression introduced in 0.10.1 in parse_all.call() (fixes #77)

* evaluate() now respects options(warn >= 2); all warnings are turned into
  errors (#81)

Version 0.10.1
------------------------------------------------------------------------------

* Added parse_all.call() method to use the original source for evaluating call
  objects (because base::deparse() breaks non-ascii source code) (fixes #74)

Version 0.10
------------------------------------------------------------------------------

* Added option for the evaluate function to include timing information of ran
  commands. This information will be subsequently rendered by the replay.
  Example usage:
  evaluate::replay(evaluate::evaluate('Sys.sleep(1)', include_timing = TRUE))

* Added a new function `flush_console()` to emulate `flush.console()` in
  `evaluate()` (#61).

* Added a `inject_funs()` function to create functions in the environment passed
  to the `envir` argument of `evaluate()`.

Version 0.9
------------------------------------------------------------------------------

* Added an argument `allow_error` to `parse_all()` to allow syntactical errors
  in R source code when `allow_error = TRUE`; this means `evaluate(stop_on_error
  = 0 or 1)` will no longer stop on syntactical errors but returns a list of
  source code and the error object instead. This can be useful to show
  syntactical errors for pedagogical purposes.

Version 0.8.3
------------------------------------------------------------------------------

* Added an argument `filename` to evaluate() and parse_all() (thanks,
  @flying-sheep, #58).

Version 0.8
------------------------------------------------------------------------------

* Changed package license to MIT.

Version 0.7.2
------------------------------------------------------------------------------

* replay() fails to replay certain objects such as NULL (#53).
