@@ -1,3 +1,6 @@
+* Add keep_package_startup_message to control keeping the package startup
+  messages (@jimhester)knitr/#1583)
+
 Version 0.11
 ------------------------------------------------------------------------------
 
